[gd_scene load_steps=6 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Assets/GreenTheme.tres" type="Theme" id=2]
[ext_resource path="res://DialoguesSearcher.gd" type="Script" id=3]
[ext_resource path="res://SaveAs.gd" type="Script" id=4]
[ext_resource path="res://Assets/Clean.tres" type="DynamicFont" id=5]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )
_mouse_popup = NodePath("MousePopup")

[node name="GraphEdit" type="GraphEdit" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
right_disconnects = true
zoom_min = 0.1
zoom_max = 2.0
zoom_step = 1.05
show_zoom_label = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 8.0
margin_top = 75.0
margin_right = 693.0
margin_bottom = 115.0
custom_constants/separation = 20

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 685.0
margin_bottom = 35.0
custom_constants/separation = 10

[node name="OpenNew" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_right = 125.0
margin_bottom = 35.0
rect_min_size = Vector2( 125, 35 )
text = "OPEN FILE"

[node name="Save" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 135.0
margin_right = 260.0
margin_bottom = 35.0
rect_min_size = Vector2( 125, 35 )
mouse_default_cursor_shape = 2
text = "SAVE"

[node name="SaveAs" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 270.0
margin_right = 395.0
margin_bottom = 35.0
rect_min_size = Vector2( 125, 35 )
mouse_default_cursor_shape = 2
text = "SAVE AS"

[node name="Clear" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 405.0
margin_right = 530.0
margin_bottom = 35.0
rect_min_size = Vector2( 125, 35 )
mouse_default_cursor_shape = 2
text = "CLEAR ALL"

[node name="Notification" type="Label" parent="VBoxContainer/HBoxContainer"]
visible = false
margin_left = 540.0
margin_top = 5.0
margin_right = 606.0
margin_bottom = 30.0
text = "SAVED!"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 55.0
margin_right = 685.0
margin_bottom = 55.0
custom_constants/separation = 10

[node name="NewNode" type="Button" parent="VBoxContainer/HBoxContainer2"]
visible = false
margin_right = 125.0
margin_bottom = 35.0
rect_min_size = Vector2( 125, 35 )
mouse_default_cursor_shape = 2
text = "+ NODE"

[node name="NewOption" type="Button" parent="VBoxContainer/HBoxContainer2"]
visible = false
margin_left = 135.0
margin_right = 260.0
margin_bottom = 35.0
rect_min_size = Vector2( 125, 35 )
mouse_default_cursor_shape = 2
text = "+ OPTION"

[node name="Feature" type="Button" parent="VBoxContainer/HBoxContainer2"]
visible = false
margin_left = 270.0
margin_right = 395.0
margin_bottom = 35.0
rect_min_size = Vector2( 125, 35 )
mouse_default_cursor_shape = 2
text = "+ FEATURE"

[node name="NewRoll" type="Button" parent="VBoxContainer/HBoxContainer2"]
visible = false
margin_left = 405.0
margin_right = 530.0
margin_bottom = 35.0
rect_min_size = Vector2( 125, 35 )
mouse_default_cursor_shape = 2
text = "+DICE ROLL"

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="DialoguesSearcher" type="WindowDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -346.0
margin_top = -200.0
margin_right = 346.0
margin_bottom = 200.0
script = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="DialoguesSearcher"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 15.0
margin_top = 15.0
margin_right = -15.0
margin_bottom = -15.0
custom_constants/separation = 25

[node name="HBoxContainer" type="HBoxContainer" parent="DialoguesSearcher/VBoxContainer"]
margin_right = 662.0
margin_bottom = 48.0
custom_constants/separation = 30

[node name="LineEdit" type="LineEdit" parent="DialoguesSearcher/VBoxContainer/HBoxContainer"]
margin_right = 540.0
margin_bottom = 48.0
size_flags_horizontal = 3
placeholder_text = "Dialogues folder path"

[node name="Search" type="Button" parent="DialoguesSearcher/VBoxContainer/HBoxContainer"]
margin_left = 570.0
margin_right = 662.0
margin_bottom = 48.0
text = "REFRESH"

[node name="ScrollContainer" type="ScrollContainer" parent="DialoguesSearcher/VBoxContainer"]
margin_top = 73.0
margin_right = 662.0
margin_bottom = 370.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Dialogues" type="VBoxContainer" parent="DialoguesSearcher/VBoxContainer/ScrollContainer"]
margin_right = 662.0
margin_bottom = 297.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="FileName" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -20.0
margin_top = 10.0
margin_right = 20.0
margin_bottom = 25.0
grow_horizontal = 2
align = 1

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -255.0
margin_top = -70.5
margin_right = 255.0
margin_bottom = 70.5
window_title = "Save as..."
script = ExtResource( 4 )

[node name="VBoxContainer" type="VBoxContainer" parent="ConfirmationDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -43.0

[node name="LineEdit" type="LineEdit" parent="ConfirmationDialog/VBoxContainer"]
margin_right = 494.0
margin_bottom = 48.0
placeholder_text = "File name"

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="MousePopup" type="PopupMenu" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -10.0
margin_top = -10.0
margin_right = 10.0
margin_bottom = 10.0
items = [ "+ START", null, 0, false, false, 0, 0, null, "", false, "+ Line", null, 0, false, false, 1, 0, null, "", false, "+ Condition", null, 0, false, false, 2, 0, null, "", false, "+ Setter", null, 0, false, false, 3, 0, null, "", false, "+ Caller", null, 0, false, false, 4, 0, null, "", false ]

[node name="Error" type="AcceptDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -125.0
margin_right = 300.0
margin_bottom = 125.0
rect_min_size = Vector2( 600, 250 )
window_title = "ЁКАРНЫЙ БАБАЙ"

[node name="RichTextLabel" type="RichTextLabel" parent="Error"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -43.0
text = "Произошла залупа. Чекай логи."

[node name="V" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="V"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -221.0
margin_top = 11.0
margin_right = -23.0
margin_bottom = 32.0
grow_horizontal = 0
custom_fonts/font = ExtResource( 5 )
text = "Godot Dialogs Editor BETA"

[connection signal="connection_from_empty" from="GraphEdit" to="." method="_on_GraphEdit_connection_from_empty"]
[connection signal="connection_request" from="GraphEdit" to="." method="_on_GraphEdit_connection_request"]
[connection signal="connection_to_empty" from="GraphEdit" to="." method="_on_GraphEdit_connection_to_empty"]
[connection signal="disconnection_request" from="GraphEdit" to="." method="_on_GraphEdit_disconnection_request"]
[connection signal="gui_input" from="GraphEdit" to="." method="_on_GraphEdit_gui_input"]
[connection signal="node_selected" from="GraphEdit" to="." method="_on_GraphEdit_node_selected"]
[connection signal="node_unselected" from="GraphEdit" to="." method="_on_GraphEdit_node_unselected"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/OpenNew" to="." method="_on_OpenNew_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Save" to="." method="_on_Save_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/SaveAs" to="." method="_on_SaveAs_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Clear" to="." method="_on_Clear_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/NewNode" to="." method="_on_NewNode_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/NewOption" to="." method="_on_NewOption_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/Feature" to="." method="_on_feature_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/NewRoll" to="." method="_on_NewRoll_pressed"]
[connection signal="about_to_show" from="DialoguesSearcher" to="DialoguesSearcher" method="_on_DialoguesSearcher_about_to_show"]
[connection signal="directory_updated" from="DialoguesSearcher" to="." method="_on_DialoguesSearcher_directory_updated"]
[connection signal="load_dialog" from="DialoguesSearcher" to="." method="load_save"]
[connection signal="pressed" from="DialoguesSearcher/VBoxContainer/HBoxContainer/Search" to="DialoguesSearcher" method="_on_Refresh_pressed"]
[connection signal="confirmed" from="ConfirmationDialog" to="ConfirmationDialog" method="_on_ConfirmationDialog_confirmed"]
[connection signal="save_dialog_as" from="ConfirmationDialog" to="." method="_on_ConfirmationDialog_save_dialog_as"]
[connection signal="id_pressed" from="MousePopup" to="." method="_on_MousePopup_id_pressed"]
